2005-05-11 - patrice
Added getBpp() function to the ARAnyM fVDI driver.
Needed when using fVDI driver with OpenGL rendering.

2005-05-09 - johan
Miscellaneous additions to make it possible to build fVDI with
FreeType support without depending on external library code.
(Still untested functionality, but it builds OK.)
Minor change to vqt_name for vector font support.
FreeType stuff checked into CVS.

2005-05-07 - standa
Fatal Return stack issue fixed. Now the FreeType2 again works with
the changed asm parts.
Fix in lib_vqt_extent() where the justifications didn't necessarilly
work due to register number confusion.

2005-05-06 - johan/standa
Updates to support Standa's new FreeType2 machinery.

2005-04-28 - johan
Fixed problem that caused 32 bit (without -mshort) gcc build to hang.
Made the engine understand that v_clswk on pass-through handles are of
no concern to fVDI drivers.
	
2005-04-25 - johan
Support for redirection of vex_wheelv to an underlying VDI.
	
2005-04-24 - standa
Buildsystem switch to GNU make

2005-04-23 - johan
ARAnyM driver synchronized with the ARAnyM CVS repository (relevant
changes have been added to this file).
ARAnyM driver now builds using gcc!
Fix for a bug concerning negative mouse x-coordinates in the ARAnyM driver.
Updated ARAnyM debug printf usage.
Bug fixes and conversions to C for arcs and rounded boxes.
fVDI engine version bumped to 0.964beta.

2005-03-20 - standa
For the ARAnyM driver:
 Ensure the wk->screen.pixel.* values are setup from the actual fvdi.sys
 values in any setup_wk() call.
 The problem was that the setup_wk() used to selfmodify the value based
 on the ones got from common driver init() method. The method setup_wk()
 is called twice however before the open_wk().

2005-01-24 - standa
For the ARAnyM driver:
 openwk() and closewk() added to the NF api -> boot bug fixed.
 Large cleanup in the m68k part.

2005-01-20 - standa
For the ARAnyM driver:
 Some warning cleanup.
 Uneffective assumenf and noshadow features removed.